--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -221,6 +221,7 @@ func main() async throws {
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
+
 const client = new Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
     .setProject("[PROJECT_ID]")")
@@ -272,8 +273,7 @@ void main() async {
     <li>
         <h3>Android</h3>
         <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import android.util.Log
-import io.appwrite.AppwriteException
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>
 import io.appwrite.Client
 import io.appwrite.Query
 import io.appwrite.services.Databases
@@ -412,6 +412,7 @@ func main() async throws{
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
+
 const client = new Client()
     .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
     .setProject("[PROJECT_ID]");
@@ -458,31 +459,28 @@ void main() async {
     <li>
         <h3>Android</h3>
         <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import android.util.Log
-import io.appwrite.AppwriteException
-import io.appwrite.Client
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.Query
 import io.appwrite.services.Databases
 
 suspend fun main() {
-        val client = Client(applicationContext)
-            .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-            .setProject("[PROJECT_ID]")
+    val client = Client(applicationContext)
+        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setProject("[PROJECT_ID]")
 
-        val databases = Databases(client)
+    val databases = Databases(client)
 
-        try {
-            val documents = databases.listDocuments(
-                databaseId = "[DATABASE_ID]",
-                collectionId = "[COLLECTION_ID]",
-                queries = listOf(
-                    Query.equal("title", listOf("Avatar", "Lord of the Rings")),
-                    Query.greaterThan("year", 1999)
-                )
+    try {
+        val documents = databases.listDocuments(
+            databaseId = "[DATABASE_ID]",
+            collectionId = "[COLLECTION_ID]",
+            queries = listOf(
+                Query.equal("title", listOf("Avatar", "Lord of the Rings")),
+                Query.greaterThan("year", 1999)
             )
-        } catch (e: AppwriteException) {
-            Log.e("Appwrite", e.message)
-        }
+        )
+    } catch (e: AppwriteException) {
+        Log.e("Appwrite", e.message)
     }
 }</code></pre>
         </div>
@@ -491,6 +489,7 @@ suspend fun main() {
         <h3>iOS</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
+import AppwriteModels
 
 func main() async throws {
     let client = Client()
@@ -604,11 +603,9 @@ void main() async {
     <li>
         <h3>Android</h3>
         <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import android.util.Log
-import io.appwrite.AppwriteException
-import io.appwrite.Client
-import io.appwrite.services.Databases
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.Query
+import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
@@ -635,6 +632,7 @@ suspend fun main() {
         <h3>iOS</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
+import AppwriteModels
 
 func main() async throws {
     let client = Client()
@@ -712,11 +710,9 @@ void main() async {
     <li>
         <h3>Android</h3>
         <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import android.util.Log
-import io.appwrite.AppwriteException
-import io.appwrite.Client
-import io.appwrite.services.Databases
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.Query
+import io.appwrite.services.Databases
 
 suspend fun main() {
     val client = Client(applicationContext)
