--- a/app/views/docs/pagination.phtml
+++ b/app/views/docs/pagination.phtml
@@ -14,6 +14,7 @@
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Query } from "appwrite";
+
 const client = new Client()
     .setEndpoint('https://[HOSTNAME_OR_IP]/v1')
     .setProject('[PROJECT_ID]');
@@ -77,9 +78,7 @@ void main() async {
     <li>
         <h3>Android</h3>
         <div class="ide" data-lang="kotlin" data-lang-label="Android SDK">
-            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import android.util.Log
-import io.appwrite.AppwriteException
-import io.appwrite.Client
+            <pre class="line-numbers"><code class="prism language-kotlin" data-prism>import io.appwrite.Client
 import io.appwrite.Query
 import io.appwrite.services.Databases
 
@@ -114,11 +113,12 @@ suspend fun main() {
         <h3>iOS</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
+import AppwriteModels
 
 func main() async throws {
     let client = Client()
-      .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
-      .setProject("[PROJECT_ID]")
+        .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+        .setProject("[PROJECT_ID]")
 
     let databases = Databases(client)
 
@@ -160,6 +160,11 @@ func main() async throws {
         <h3>Web</h3>
         <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
             <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Databases, Query } from "appwrite";
+
+const client = new Client()
+    .setEndpoint("https://[HOSTNAME_OR_IP]/v1")
+    .setProject("[PROJECT_ID]");
+
 const databases = new Databases(client);
 
 // Page 1
@@ -260,6 +265,7 @@ suspend fun main() {
         <h3>iOS</h3>
         <div class="ide" data-lang="swift" data-lang-label="Apple SDK">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>import Appwrite
+import AppwriteModels
 
 func main() async throws {
     let client = Client()
