--- a/app/views/docs/debugging.phtml
+++ b/app/views/docs/debugging.phtml
@@ -29,7 +29,7 @@
 
 <p>Appwrite uses conventional HTTP response codes to indicate the success or failure of an API request. In general: Codes in the 2xx range indicate success. Codes in the 4xx range indicate an error that failed given the information provided (e.g., a required parameter was omitted, invalid input, etc.). Codes in the 5xx range indicate an error with the Appwrite server, but these are rare.</p>
 
-<p><a href="/docs/error-codes">Learn more about Appwrite status codes</a></p>
+<p><a href="/docs/response-codes">Learn more about Appwrite status codes</a></p>
 
 
 <h2><a href="/docs/debugging#devMode" id="devMode">Dev Mode</a></h2>
