Changed /error-codes to /response-codes
/error-codes is the deprecated href and /response-codes the new one.

--- a/app/views/docs/response-codes.phtml
+++ b/app/views/docs/response-codes.phtml
@@ -124,7 +124,7 @@ $errorTypes = $this->getParam('errors', []);
     </tbody>
 </table>
 
-<h2><a href="/docs/error-codes#errorMessages" id="errorMessages">Error Messages</a></h2>
+<h2><a href="/docs/response-codes#errorMessages" id="errorMessages">Error Messages</a></h2>
 
 <p>When the Appwrite APIs return error messages, it does so in JSON format. For example, an error might look like this:</p>
 
@@ -137,7 +137,7 @@ $errorTypes = $this->getParam('errors', []);
 </code></pre>
 </div>
 
-<h2><a href="/docs/error-codes#errorTypes" id="errorTypes">Error Types</a></h2>
+<h2><a href="/docs/response-codes#errorTypes" id="errorTypes">Error Types</a></h2>
 
 <p> Appwrite also passes convenient error types in addition to the HTTP response codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages in your applications. Error types are convenient to identify the type of error that occurred. </p>
 
