Fix the Stop and Uninstall links

--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -110,7 +110,7 @@
 
 <p>Once the Docker installation completes, go to your machine hostname or IP address on your browser to access the Appwrite console. Please notice that on non-linux native hosts the server might take a few minutes to start after installation completes.</p>
 
-<h3><a href="/docs/installation#stop" id="manual">Stop</a></h3>
+<h3><a href="/docs/installation#stop" id="stop">Stop</a></h3>
 
 <p>You can stop your Appwrite containers by using the following command executed from the same directory as your docker-compose.yml file.</p>
 
@@ -118,7 +118,7 @@
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose stop</code></pre>
 </div>
 
-<h3><a href="/docs/installation#uninstall" id="manual">Uninstall</a></h3>
+<h3><a href="/docs/installation#uninstall" id="uninstall">Uninstall</a></h3>
 
 <p>To stop and remove your Appwrite containers you can use the following command executed from the same directory as your docker-compose.yml file.</p>
 
