--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -11,7 +11,7 @@
 </p>
 
 <p> 
-    Some of the Account API methods are available from Server SDKs when you authenticate with a JWT. This allows you to perform actions on behalf of a project account's user on the backend.
+    Some of the Account API methods are available from Server SDKs when you authenticate with a JWT. This allows your Server SDK to perform actions on behalf of a user.
 </p>
 
 <h2><a href="/docs/authentication#create-an-account" id="create-an-account">Create An Account</a></h2>
