--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -89,7 +89,7 @@ promise.then(function (response) {
 <h3><a href="/docs/authentication#oauth" id="oauth">OAuth</a></h3>
 
 <p>
-    OAuth is another way to authenticate a user using a multi-step process. When using OAuth to authenticate, the request to authenticate is initiated from the client application, then the user is redirected to an OAuth2 provider to complete the authentication step, and finally, the user is redirected back to the client application. This provides integration with many third-party services that provide their own OAuth integration as a more secure approach than providing a username/password directly.
+    OAuth is another way to authenticate a user using a multi-step process. When using OAuth to authenticate, the authentication request is initiated from the client application. The user is then redirected to an OAuth2 provider to complete the authentication step, and finally, the user is redirected back to the client application. This provides integration with many third-party services that provide their own OAuth integration as a more secure approach than providing a username/password directly.
 </p>
 
 <p>
