--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -113,7 +113,7 @@ account.createOAuth2Session('amazon');</code></pre>
 </div>
 
 <p>
-    Notice, the function call for <b>createOAuth2Session</b> is not asynchronous. No need to use <b>await<b>.
+    Notice, the function call for <b>createOAuth2Session</b> is synchronous and hence, there is no need to use <b>await<b>.
 </p>
 
 <p>  
