--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -117,7 +117,7 @@ account.createOAuth2Session('amazon');</code></pre>
 </p>
 
 <p>  
-    If there is already an active anonymous session, the new session will be attached to the logged-in account. If there are no active sessions, the server will attempt to look for an account with the same email address as the email received from the OAuth2 provider and attach the new session to the existing account. If no matching account is found - the server will create a new account.
+    If there is already an active anonymous session, the new session will be attached to it. If there are no active sessions, the server will attempt to look for an account with the same email address as the email received from the OAuth2 provider and attach the new session to the existing account. If no matching account is found - the server will create a new account.
 </p>
 
 <h3><a href="/docs/authentication#phone" id="phone">Phone</a></h3>
