--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -123,7 +123,7 @@ account.createOAuth2Session('amazon');</code></pre>
 <h3><a href="/docs/authentication#phone" id="phone">Phone</a></h3>
 
 <p>
-    Phone authentication is done using a two-step authentication process. When using phone authentication, the request to authenticate is initiated from the client application, an SMS is sent to the user with a secret key for creating a session. 
+    Phone authentication is done using a two-step authentication process. When using phone authentication, the authentication request is initiated from the client application and an SMS is sent to the user with a secret key for creating a session. 
 </p>
 
 <p> 
