--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -131,7 +131,7 @@ account.createOAuth2Session('amazon');</code></pre>
 </p>
 
 <p>
-    The example below shows you how to initiate a phone authentication using the Web SDK.
+    The example below shows you how to initiate a phone authentication request using the Web SDK.
 </p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
