--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -158,7 +158,7 @@ promise.then(function (response) {
 </div>
 
 <p>
-    After initiation, the returned username and secret are used to confirm the user. The secret will be a 6 digit number in the SMS message sent to the user.
+    After initiation, the returned user ID and secret are used to confirm the user. The secret will be a 6 digit number in the SMS message sent to the user.
 </p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
