reword anonymous session expiration

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -62,7 +62,7 @@ promise.then(function (response) {
 <h3><a href="/docs/authentication#anonymous-user" id="anonymous-user">Anonymous User</a></h3>
 
 <p>
-    Anonymous authentication allows users of your application to create a temporary valid session without creating an account. The session will last for a year. If an account is created with an active anonymous session, it will be attached to the existing anonymous session.
+Anonymous authentication allows users of your application to create a temporary valid session without creating an account. The session has an expiration time of one year. If an account is created while an anonymous session is active, it will be attached to the existing anonymous session.
 </p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
