add line about limiting api key scopes

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -272,6 +272,7 @@ promise.then(function (response) {
 
 <ol>
     <li class="margin-bottom-tiny">Only keep user sessions active as long as needed.</li>
+    <li class="margin-bottom-tiny">Only grant scopes required for your use case for your APIs keys, and nothing more.</li>
     <li class="margin-bottom-tiny">Access Appwrite via HTTPS to prevent any redirects from interfering with your requests.</li>
     <li class="margin-bottom-tiny">Prefer using OAuth2 for authentication with first-party redirects.</li>
     <li class="margin-bottom-tiny">Generate an SSL certification for the Appwrite instance.</li>
