--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -248,7 +248,7 @@ promise.then(function (response) {
 <h2><a href="/docs/authentication#persistence" id="persistence">Persistence</a></h2>
 
 <p>
-    Appwrite handles the persistence of the session in a consistent way across SDKs. After authenticating with an SDK, the SDK will persist the session so that the user will not need to log in again the next time they open the app. How the session is persisted depends on the SDK.
+    Appwrite handles the persistence of the session in a consistent way across SDKs. After authenticating with an SDK, the SDK will persist the session so that the user will not need to log in again the next time they open the app. The mechanism for persistence depends on the SDK.
 </p>
 
 <ul>
